more styling and scripting

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<title>Windwood North | Dunwoody, GA </title>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/style.css">
+		<script src="js/prefixfree.min.js"></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 	
@@ -21,7 +22,7 @@
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-						<a class="navbar-brand" href="#intro">Windwood North <span class="subhead">Dunwoody, GA</span></a>
+						<a class="navbar-brand" href="#intro"><h1>Windwood North <span class="subhead">Dunwoody, GA</span></h1></a>
 					</div><!--navbar-header-->
 					<div class="collapse navbar-collapse" id="collapse">
 						<ul class="nav navbar-nav navbar-right">
@@ -36,9 +37,13 @@
  				</div><!--container -->
 			</nav>
 			
-			<div class="carousel slide" data-ride="carousel" id="featured">
-				<div class="carousel-inner">
-					<div class="item active"><img src="images/carousel-sign.jpg" alt="Windwood North entrance sign"></div>
+			<div class="carousel fade" data-ride="carousel" id="featured">
+				
+				<ol class="carousel-indicators">
+				</ol>
+				
+				<div class="carousel-inner fullheight">
+					<div class="item"><img src="images/carousel-sign.jpg" alt="Windwood North entrance sign"></div>
 					<div class="item"><img src="images/carousel-tree.jpg" alt="Neigborhood view"></div>
 					<div class="item"><img src="images/carousel-tennis.jpg" alt="Tennis courts"></div>
 					<div class="item"><img src="images/carousel-playground.jpg" alt="Playground"></div>
@@ -56,14 +61,15 @@
 			
 		</header>
 		
+		
 		<div class="main">
 			
 			<section class="page" id="about">
 				<div class="content container">
 					<h2>About Windwood North</h2>
 					<div class="row">
-						<p class="col-sm-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-						<p class="col-sm-7">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+						<p class="col-md-5 col-md-offset-1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+						<p class="col-md-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 					</div><!-- row -->
 				</div> <!-- content container -->
 			</section> <!-- about page -->	
@@ -84,7 +90,7 @@
 				<div class="content container">
 					<div class="row">
 						<h2>Nearby Points of Interest</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+						<p class="col-sm-12">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 					</div><!-- row -->
 				</div><!-- content container -->
 			</section> <!-- about page -->	
@@ -92,10 +98,10 @@
 			<section class="page" id="forsale">
 				<div class="content container">
 					<div class="row">
-						<div class="col-sm-6">
+						<div class="col-sm-7">
 							<img src="images/carousel-woods.jpg" alt="Neighborhood woods">
 						</div>
-						<div class="col-sm-4">
+						<div class="col-sm-5">
 							<h2>Homes For Sale &amp; Rent</h2>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 						</div><!-- col -->
@@ -107,7 +113,7 @@
 				<div class="content container">
 					<div class="row">
 						<h2>Residents Only</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+						<p class="col-sm-12">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 					</div><!-- row -->
 				</div><!-- content container -->
 			</section> <!-- about page -->	
@@ -118,7 +124,7 @@
 			<div class="content container-fluid">
 				<div class="row">
 					<div class="col-sm-12">
-						<p>Site created and maintained by Windwood North resident, <a href="http://thechad.com">Chad Carpenter</a>.</p>
+						<p>Site voluntarily created and maintained by Windwood&nbsp;North resident, <a href="http://thechad.com">Chad Carpenter</a>.</p>
 					</div><!--col-->
 				</div><!--row-->
 			</div><!--content container-->
