Added Google Maps

--- a/index.html
+++ b/index.html
@@ -122,6 +122,8 @@
 					</div> <!--row-->
  				</div> <!--content container -->
 			</section> <!-- about page -->	
+		
+			
 			
 			<section class="page" id="nearby">
 				<div class="content container">
@@ -129,6 +131,15 @@
 						<h2>Nearby Points of Interest</h2>
 						<p class="col-sm-12">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 					</div><!-- row -->
+					<div class="row map-container">
+						<div id="map" class="col-sm-12" >
+						</div><!-- map -->
+					</div><!-- row -->
+					<div class="row">
+						<div id="locations">
+							<!-- locations will go here -->
+						</div>
+					</div>
 				</div><!-- content container -->
 			</section> <!-- about page -->	
 			
@@ -166,12 +177,13 @@
 				</div><!--row-->
 			</div><!--content container-->
 		</footer>
-			
-
 		
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB3q-LjwN-XTqPdBmzFc3tLvNjP8XO7NeM"></script>
 		<script src="js/scripts.js"></script>
+		
+		
 		
 	</body>
 	
