Additional map functionality

--- a/index.html
+++ b/index.html
@@ -136,8 +136,14 @@
 						</div><!-- map -->
 					</div><!-- row -->
 					<div class="row">
-						<div id="locations">
-							<!-- locations will go here -->
+						<div id="locations-list" class="col-sm-4 col-sm-offset-1">
+							<!-- location list will go here -->
+						</div>
+						<div id="locations-detail" class="col-sm-5 col-sm-offset-1">
+							<!-- location detail will go here -->
+							<h4>
+								Click a location to the left to learn more about it.
+							</h4>
 						</div>
 					</div>
 				</div><!-- content container -->
