More map functionality

--- a/index.html
+++ b/index.html
@@ -128,22 +128,24 @@
 			<section class="page" id="nearby">
 				<div class="content container">
 					<div class="row">
-						<h2>Nearby Points of Interest</h2>
-						<p class="col-sm-12">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+						<div class="col-sm-12">
+							<h2>Nearby Points of Interest</h2>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+						</div>
 					</div><!-- row -->
 					<div class="row map-container">
 						<div id="map" class="col-sm-12" >
 						</div><!-- map -->
 					</div><!-- row -->
-					<div class="row">
-						<div id="locations-list" class="col-sm-4 col-sm-offset-1">
-							<!-- location list will go here -->
+					<div id="locations-container" class="row">
+						<div class="col-sm-5 col-sm-offset-1">
+							<ul id="locations-list">
+								<!-- location list will go here -->
+							</ul>
 						</div>
-						<div id="locations-detail" class="col-sm-5 col-sm-offset-1">
+						<div id="locations-detail" class="col-sm-5">
 							<!-- location detail will go here -->
-							<h4>
-								Click a location to the left to learn more about it.
-							</h4>
+							<p>Click a location to learn more about it.</p>
 						</div>
 					</div>
 				</div><!-- content container -->
