New page content and styling - For Sale, Residents

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 						</div><!-- col -->
 					</div> <!--row-->
  				</div> <!--content container -->
-			</section> <!-- about page -->	
+			</section> <!-- gallery page -->	
 		
 			
 			
@@ -149,13 +149,13 @@
 						</div>
 					</div>
 				</div><!-- content container -->
-			</section> <!-- about page -->	
+			</section> <!-- nearby page -->	
 			
 			<section class="page" id="forsale">
 				<div class="content container">
 					<div class="row">
 						<div class="col-sm-7">
-							<img src="images/carousel-woods.jpg" alt="Neighborhood woods">
+							<img class="shadow" src="images/Zillow-Windwood-North-For-Sale.png" alt="Windwood North homes on Zillow">
 						</div>
 						<div class="col-sm-5">
 							<h2>Homes For Sale &amp; Rent</h2>
@@ -163,16 +163,27 @@
 						</div><!-- col -->
 					</div><!-- row -->
 				</div><!-- content container -->
-			</section> <!-- about page -->	
+			</section> <!-- forsale page -->	
 			
 			<section class="page" id="residents">
-				<div class="content container">
-					<div class="row">
-						<h2>Residents Only</h2>
-						<p class="col-sm-12">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-					</div><!-- row -->
-				</div><!-- content container -->
-			</section> <!-- about page -->	
+				<div class="row">
+					<div class="content container">					
+						<div class="col-sm-12 jumbotron">
+							<div class="row">
+								<div class="col-sm-7">
+									<h2>Residents</h2>
+									<p>Windwood North residents have a private forum on a site called Nextdoor. We use the site to share community events, recommendations, items for sale/free, crime/safety concerns, ideas about how to make our neighborhood better, and more.</p>
+									<p>Click the button to sign in or create a Nextdoor Neighbor account.</p>
+									<p><a class="btn btn-primary btn-lg" href="https://windwoodnorth.nextdoor.com" role="button" target="_blank">Nextdoor Neighbor</a></p>
+								</div> <!-- col -->
+								<div class="col-sm-5">
+										<img class="shadow" src="images/Nextdoor-Neighbor-screenshot.jpg" alt="Nextdoor Screenshot">
+								</div> <!-- col -->
+							</div> <!-- row -->
+						</div> <!-- col -->
+					</div> <!-- content container -->
+				</div> <!-- row -->
+			</section> <!-- residents page -->	
 			
 		</div> <!-- main div -->
 		
