Added video header

--- a/index.html
+++ b/index.html
@@ -37,7 +37,19 @@
  				</div><!--container -->
 			</nav>
 			
+			<!-- uncomment this to use header image instead of video 
 			<div id="headerimage" class="fullheight">
+			</div>
+			-->
+			
+			<div id="headerimage">
+				<div class="video-container">
+					<video preload="auto" autoplay="autoplay" loop="loop" muted="muted" poster="http://thechad.com/WindwoodNorth/WindwoodNorth.jpg" >
+						<source src="http://thechad.com/WindwoodNorth/WindwoodNorth.mp4" type="video/mp4">
+						<source src="http://thechad.com/WindwoodNorth/WindwoodNorth.webm" type="video/webm"> 
+						
+					</video>
+				</div>
 			</div>
 			
 		</header>
