--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 			
 			<section class="page" id="gallery">
 				<div class="content container">
-					<h2>Gallery</h2>
+					<h2>Neighborhood Photo Gallery</h2>
 					<div class="row">
 						
 						<div class="col-sm-8 col-sm-push-4">
