Added clip-path styling

--- a/index.html
+++ b/index.html
@@ -58,14 +58,28 @@
 		<div class="main">
 			
 			<section class="page" id="about">
-				<div class="content container">
-					<h2>About Windwood North</h2>
+				<div class="content container-fluid">
 					<div class="row">
-						<p class="col-md-5 col-md-offset-1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-						<p class="col-md-5">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-					</div><!-- row -->
+
+							<img src="images/welcome-sign.jpg">
+						
+							<h2>Welcome to Windwood North</h2>
+							<p>Windwood North is a beautiful, quiet neighborhood situated in Dunwoody, Georgia. Here, mature trees line the roads, friendly residents wave as they pass, and families gather at the local park.</p>
+							<p>Though quiet and secluded, the neighborhood has easy access to 285, meaning you're never far from where you want to be.</p>
+							<p>Scroll down to take a tour of the neighborhood.</p>
+
+						
+					</div> <!-- row -->
 				</div> <!-- content container -->
 			</section> <!-- about page -->	
+			
+			<svg width="0" height="0">
+			  <defs>
+				<clipPath id="clip-shape" clipPathUnits="objectBoundingBox">
+				  <polygon points="0.5 0, 0 1, 1 1, 1 0" />
+				</clipPath>
+			  </defs>
+			</svg>
 			
 			<section class="page" id="gallery">
 				<div class="content container">
@@ -90,8 +104,7 @@
 										<img src="images/carousel-tree.jpg" alt="Neigborhood view">
 										<div class="carousel-caption">
 											<h3>Title 1</h3>
-											<p>Proin placerat rhoncus nunc, id placerat sem laoreet vitae. Sed sagittis, leo id ullamcorper iaculis, sem quam ullamcorper dui, et tempor dui lacus a arcu. Etiam ac consequat magna. Mauris sagittis metus sodales dui faucibus, eu vehicula felis porttitor. Donec faucibus consequat quam, ac rutrum dui lacinia vel. Etiam condimentum.</p>
-										</div>
+											<p>Windwood North is made up of approximately 120 single-family homes. We have no HOA or other organizing body.</p>										</div>
 									</div>
 									<div class="item">
 										<img src="images/carousel-tennis.jpg" alt="Tennis courts">
@@ -215,7 +228,7 @@
 			<div class="content container-fluid">
 				<div class="row">
 					<div class="col-sm-12">
-						<p>Site voluntarily created and maintained by Windwood&nbsp;North resident, <a href="http://thechad.com">Chad Carpenter</a>.</p>
+						<p>Site voluntarily created and maintained by Windwood&nbsp;North resident, <a href="http://thechad.com" target="_blank">Chad Carpenter</a>.</p>
 					</div><!--col-->
 				</div><!--row-->
 			</div><!--content container-->
