--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 										</div> <!-- carousel-caption -->
 									</div> <!-- item -->
 									<div class="item">
-										<img src="images/carousel-tree.jpg" alt="Neigborhood view">
+										<img src="images/carousel-yard.jpg" alt="Neigborhood view">
 										<div class="carousel-caption">
 											<h3>Trees, Trees, Trees</h3>
 											<p>Gorgeous, mature trees abound in Windwood North, providing shade, privacy, and beauty.</p>										
@@ -113,10 +113,24 @@
 										</div> <!-- carousel-caption -->
 									</div> <!-- item -->
 									<div class="item">
-										<img src="images/carousel-park-sign.jpg" alt="Windwood Hollow Park">
+										<img src="images/carousel-library.jpg" alt="Little Library">
 										<div class="carousel-caption">
-											<h3>Neighborhood Park</h3>
-											<p>Windwood Hollow Park is a Dunwoody public park, though we tend to think of it as our own neighborhood park since it's nestled in at the entrance of the neighborhood.</p>
+											<h3>A Little Library</h3>
+											<p>One of our residents built this adorable free library. Looking for a good read? Walk down to the park and see what's available.</p>
+										</div> <!-- carousel-caption -->
+									</div> <!-- item -->
+									<div class="item">
+										<img src="images/carousel-workout.jpg" alt="Adult Exercise Equipment">
+										<div class="carousel-caption">
+											<h3>Something for the Adults</h3>
+											<p>While the kids run around the playground, you can work out on the adult fitness equipment positioned nearby.</p>
+										</div> <!-- carousel-caption -->
+									</div> <!-- item -->
+									<div class="item">
+										<img src="images/carousel-path.jpg" alt="Linear Park">
+										<div class="carousel-caption">
+											<h3>Walk It Out</h3>
+											<p>Just across Peeler Road is a tree-lined walking path along the water works. Great for taking the dogs or the kids out for some exercise.</p>
 										</div> <!-- carousel-caption -->
 									</div> <!-- item -->
 								</div><!--carousel-inner -->
