Minor map update

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 			
 			<div id="headerimage">
 				<div class="video-container">
-					<video preload="auto" autoplay="autoplay" loop="loop" muted="muted" poster="http://thechad.com/WindwoodNorth/WindwoodNorth.jpg" >
-						<source src="http://thechad.com/WindwoodNorth/WindwoodNorth.mp4" type="video/mp4">
-						<source src="http://thechad.com/WindwoodNorth/WindwoodNorth.webm" type="video/webm"> 
+					<video preload="auto" autoplay="autoplay" loop="loop" muted="muted" poster="video/WindwoodNorth.jpg" >
+						<source src="video/WindwoodNorth.mp4" type="video/mp4">
+						<source src="video/WindwoodNorth.webm" type="video/webm"> 
 						
 					</video>
 				</div>
