Restyled-header with big headline

--- a/index.html
+++ b/index.html
@@ -43,10 +43,13 @@
 			-->
 			
 			<div id="headerimage">
+				<div id="headline">
+					<h1 class="fade-in">Windwood North</h1>
+				</div>
 				<div class="video-container">
 					<video preload="auto" autoplay="autoplay" loop="loop" muted="muted" poster="video/WindwoodNorth.jpg" >
 						<source src="video/WindwoodNorth.mp4" type="video/mp4">
-						<source src="video/WindwoodNorth.webm" type="video/webm"> 
+						<source src="http://windwoodnorth.com/video/WindwoodNorth.webm" type="video/webm"> 
 						
 					</video>
 				</div>
@@ -130,7 +133,7 @@
 										<img src="images/carousel-path.jpg" alt="Linear Park">
 										<div class="carousel-caption">
 											<h3>Walk It Out</h3>
-											<p>Just across Peeler Road is a tree-lined walking path along the water works. Great for taking the dogs or the kids out for some exercise.</p>
+											<p>Just across the street is Peeler Road Linear Park, a tree-lined walking path along the water works. Great for taking the dogs or the kids out for some exercise.</p>
 										</div> <!-- carousel-caption -->
 									</div> <!-- item -->
 								</div><!--carousel-inner -->
