Added headline animation and scroll hint

--- a/index.html
+++ b/index.html
@@ -42,16 +42,22 @@
 			</div>
 			-->
 			
-			<div id="headerimage">
+			<div id="headerimage" class="fullheight">
 				<div id="headline">
-					<h1 class="fade-in">Windwood North</h1>
+					<h1>Windwood North</h1>
+					<h2>Dunwoody, GA</h2>
 				</div>
 				<div class="video-container">
-					<video preload="auto" autoplay="autoplay" loop="loop" muted="muted" poster="video/WindwoodNorth.jpg" >
-						<source src="video/WindwoodNorth.mp4" type="video/mp4">
+					<video preload="auto" autoplay="autoplay" loop="loop" muted="muted" poster="http://windwoodnorth.com/video/WindwoodNorth.jpg" >
+						<source src="http://windwoodnorth.com/video/WindwoodNorth.mp4" type="video/mp4">
 						<source src="http://windwoodnorth.com/video/WindwoodNorth.webm" type="video/webm"> 
 						
 					</video>
+				</div>
+				<div id="scroll-hint-container">
+					<a href="#about"><div id="scroll-hint">
+					&#8964;
+					</div></a>
 				</div>
 			</div>
 			
